--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -43,10 +43,8 @@
                                 <div class="mb-3">
                                     <label for="categoria">[[#{producto.categoria}]]</label>
                                     <select class="form-select" aria-label="Default select example" name="IdCategoria" required="true">
-                                        <option value="1">Categoria 1</option>
-                                        <option value="2">Categoria 2</option>
-                                        <option value="3">Categoria 3</option>
-                                        <option value="4">Categoria 4</option>
+                                        <option th:each="categoria : ${categorias}" th:value="${categoria.idCategoria}">[[${categoria.descripcion}]]</option>
+
                                     </select>
                                 </div>
 
@@ -162,18 +160,27 @@
                                                 <h4>[[#{accion.actualizar}]]</h4>
                                             </div>
                                             <div class="card-body">
+
+                                                <div class="mb-3">
+                                                    <label for="categoria">[[#{producto.categoria}]]</label>
+                                                    <select class="form-select" aria-label="Default select example" th:field="*{idCateogoria}" name="IdCategoria" required="true">
+                                                        <option th:each="categoria : ${categorias}" th:value="${categoria.idCategoria}">[[${categoria.descripcion}]]</option>
+
+                                                    </select>
+                                                </div>
+
                                                 <div class="mb-3">
                                                     <label for="descripcion">[[#{producto.descripcion}]]</label>
                                                     <input type="text" class="form-control" 
                                                            name="descripcion" th:field="*{descripcion}"
                                                            required="true">
                                                 </div>
-                                                
+
                                                 <div class="mb-3">
                                                     <label for="detalle">[[#{producto.detalle}]]</label>
                                                     <textarea class="form-control" 
-                                                           name="detalle" th:field="*{detalle}"
-                                                           required="true" rows="3"></textarea>
+                                                              name="detalle" th:field="*{detalle}"
+                                                              required="true" rows="3"></textarea>
                                                 </div>
 
                                                 <div class="mb-3">
