--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,5 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
 
     <head th:fragment="head">
@@ -20,10 +21,19 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav" sec:authorize='hasRole("ROLE_VENDEDOR")'>
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
+                            <li class="nav-item dropdown" sec:authorize='hasRole("ROLE_ADMIN")'><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"                                    
+                                                                                                   href="#"                                   
+                                                                                                   role="button"                                    
+                                                                                                   aria-expanded="false"th:href="@{/usuario/listado}">[[#{plantilla.pruebas}]]</a>
+                                <ul class="dropdown-menu dropdown-menu-link">
+                                    <li><a class="dropdown-item"  th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>
+                                </ul>
+                            </li>
                         </ul>
                         <div class="col-md-3">
                             <ul class="navbar-nav">                                
@@ -33,6 +43,25 @@
                         </div>
                     </div>
                 </div>
+                <ul class="navbar-nav" sec:autorized="!isAuthenticated()">
+                    <li class="nav-item px-2"> 
+                        <li class="nav-item text-white my-auto">
+                            <i class="fas fa-user"></i>
+                            <span sec:authentication="name">Bob</span>
+                        </li>
+                        <a class="nav-menu-link nav-link"
+                           th:href="@{/login}">
+                            <i class="fas fa-sign-in-alt"></i>
+                        </a> 
+                        <li class="nav-item my-auto">
+                            <form method="post" th:action="@{/logout}">
+                                <button class="btn btn-dark">
+                                    <i class="fas fa-sign-out-alt"></i>
+                                </button>
+                            </form>
+                        </li>
+                    </li>
+                </ul>
             </nav>
             <section id="main-header" class="py-2 bg-success text-white">
                 <div class="container">
@@ -45,7 +74,7 @@
             </section>
 
         </header>
-        
+
         <footer th:fragment="footer" class="bg-info text-white mt-5 p-2">
             <div class="container">
                 <div class="col">
@@ -55,6 +84,6 @@
                 </div>
             </div>
         </footer>
-        
+
     </body>
 </html>
