--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -30,6 +30,7 @@
                                                                                                    role="button"                                    
                                                                                                    aria-expanded="false"th:href="@{/usuario/listado}">[[#{plantilla.pruebas}]]</a>
                                 <ul class="dropdown-menu dropdown-menu-link">
+                                    <li><a class="dropdown-item" th:href="@{/carrito/listado}">[[#{plantilla.carrito}]]</a> </li>
                                     <li><a class="dropdown-item"  th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
                                     <li><a class="dropdown-item" th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>
                                 </ul>
